--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'dbt_demo'
+name: 'dbt_de'
 version: '1.0.0'
 config-version: 2
 
@@ -32,7 +32,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  dbt_demo:
+  dbt_de:
     # Config indicated by + and applies to all files under models/example/
     staging:
       +materialized: view
@@ -42,7 +42,7 @@ vars:
   payment_type_values: [1, 2, 3, 4, 5, 6]
 
 seeds:
-    dbt_demo:
+    dbt_de:
         taxi_zone_lookup:
             +column_types:
                 locationid: numeric
